- moved product transactional methods to ProductService.java - added updateData by product code - refactoring